--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -30,22 +30,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dDo-ad-t0B">
-                                <rect key="frame" x="46" y="167" width="282" height="333.5"/>
+                                <rect key="frame" x="46" y="367" width="282" height="266.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" red="0.0087729168779999995" green="0.015778338789999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="60" id="aOL-yi-O0Q">
-                                        <rect key="frame" x="0.0" y="28" width="282" height="60"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" rowHeight="30" id="aOL-yi-O0Q">
+                                        <rect key="frame" x="0.0" y="28" width="282" height="30"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aOL-yi-O0Q" id="YNb-ur-G5y">
-                                            <rect key="frame" x="0.0" y="0.0" width="282" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="282" height="29.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ll-47-QUi">
-                                <rect key="frame" x="26" y="39" width="50.5" height="122"/>
+                                <rect key="frame" x="26" y="55.5" width="50.5" height="122"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="122" id="y9i-Tj-DHG" userLabel="height ="/>
                                 </constraints>
@@ -53,7 +53,7 @@
                                 <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MsDaley2" translatesAutoresizingMaskIntoConstraints="NO" id="8wF-to-g5i">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="claraSpenceBust" translatesAutoresizingMaskIntoConstraints="NO" id="8wF-to-g5i" userLabel="claraSpenceBust">
                                 <rect key="frame" x="37.5" y="180.5" width="300" height="306"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="8wF-to-g5i" secondAttribute="height" multiplier="47:48" id="hee-r5-Hmj"/>
@@ -74,31 +74,43 @@
                                     <constraint firstAttribute="height" constant="30" id="7Np-7D-btF"/>
                                 </constraints>
                                 <state key="normal" title="Submit"/>
+                                <connections>
+                                    <action selector="submitButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uap-At-OLD"/>
+                                </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spencerTheSaber" translatesAutoresizingMaskIntoConstraints="NO" id="9YG-I7-HBv">
+                                <rect key="frame" x="52" y="160" width="270" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="4Vb-ch-zlm"/>
+                                    <constraint firstAttribute="width" constant="270" id="sYJ-Vr-eBd"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.98825462139999998" green="1" blue="0.36187980539999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.75" id="0rI-Cz-kPA"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1lj-O8-iED"/>
                             <constraint firstItem="kR3-Xf-vgH" firstAttribute="top" secondItem="8wF-to-g5i" secondAttribute="bottom" constant="50" id="37P-rJ-edA"/>
-                            <constraint firstItem="dDo-ad-t0B" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="4OX-P3-WNf"/>
+                            <constraint firstItem="dDo-ad-t0B" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.5" id="4OX-P3-WNf"/>
                             <constraint firstItem="8wF-to-g5i" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7gt-aB-0J7"/>
                             <constraint firstItem="8wF-to-g5i" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="8v5-Fh-5wO"/>
-                            <constraint firstItem="dDo-ad-t0B" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="BhB-nM-KZn"/>
+                            <constraint firstItem="dDo-ad-t0B" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="BhB-nM-KZn"/>
                             <constraint firstItem="d5m-rg-gde" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PZ8-7b-bX0"/>
+                            <constraint firstItem="9YG-I7-HBv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.78" id="Qd9-sH-aKY"/>
                             <constraint firstItem="8wF-to-g5i" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="QzG-Q3-ZMh"/>
                             <constraint firstItem="1ll-47-QUi" firstAttribute="trailingMargin" relation="lessThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="trailing" constant="-25" id="Tti-P2-wTb"/>
+                            <constraint firstItem="9YG-I7-HBv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="a9I-5H-mne"/>
                             <constraint firstItem="d5m-rg-gde" firstAttribute="top" secondItem="kR3-Xf-vgH" secondAttribute="top" constant="50" id="cbH-f9-ola"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kia-Au-D9P"/>
-                            <constraint firstItem="1ll-47-QUi" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.3" id="ufS-38-bCP"/>
+                            <constraint firstItem="1ll-47-QUi" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.35" id="ufS-38-bCP"/>
                             <constraint firstItem="kR3-Xf-vgH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xNf-iP-cvG"/>
                             <constraint firstItem="1ll-47-QUi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="zPR-FC-3zR"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="answerTableView" destination="dDo-ad-t0B" id="z08-T8-5QU"/>
+                        <outlet property="claraSpenceBust" destination="8wF-to-g5i" id="w8t-Sb-dP1"/>
                         <outlet property="enterNameField" destination="kR3-Xf-vgH" id="IZU-wy-OAV"/>
-                        <outlet property="msDaley" destination="8wF-to-g5i" id="Ii5-s6-VHq"/>
                         <outlet property="questionLabel" destination="1ll-47-QUi" id="Smc-9Y-pfO"/>
                         <outlet property="submitButton" destination="d5m-rg-gde" id="2rU-ZT-By3"/>
                         <outlet property="tableView" destination="dDo-ad-t0B" id="2AH-Sc-92C"/>
@@ -271,7 +283,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="MsDaley2" width="517" height="528"/>
+        <image name="claraSpenceBust" width="682" height="724"/>
+        <image name="spencerTheSaber" width="527" height="527"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="5jt-q9-v0U"/>
