--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -78,11 +78,11 @@
                                     <action selector="submitButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uap-At-OLD"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spencerTheSaber" translatesAutoresizingMaskIntoConstraints="NO" id="9YG-I7-HBv">
-                                <rect key="frame" x="52" y="160" width="270" height="200"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spenceLogo" translatesAutoresizingMaskIntoConstraints="NO" id="9YG-I7-HBv">
+                                <rect key="frame" x="87" y="160" width="200" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="4Vb-ch-zlm"/>
-                                    <constraint firstAttribute="width" constant="270" id="sYJ-Vr-eBd"/>
+                                    <constraint firstAttribute="width" constant="200" id="sYJ-Vr-eBd"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -112,6 +112,7 @@
                         <outlet property="claraSpenceBust" destination="8wF-to-g5i" id="w8t-Sb-dP1"/>
                         <outlet property="enterNameField" destination="kR3-Xf-vgH" id="IZU-wy-OAV"/>
                         <outlet property="questionLabel" destination="1ll-47-QUi" id="Smc-9Y-pfO"/>
+                        <outlet property="spenceLogo" destination="9YG-I7-HBv" id="z5u-SD-x5t"/>
                         <outlet property="submitButton" destination="d5m-rg-gde" id="2rU-ZT-By3"/>
                         <outlet property="tableView" destination="dDo-ad-t0B" id="2AH-Sc-92C"/>
                     </connections>
@@ -225,7 +226,7 @@
                                     <constraint firstAttribute="width" constant="190" id="iLJ-vI-gtV"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="38"/>
-                                <state key="normal" title="LEVEL 1"/>
+                                <state key="normal" title="FACTS"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" identifier="segue_to_level_one" id="Q7w-i5-pmH"/>
                                 </connections>
@@ -238,7 +239,7 @@
                                     <constraint firstAttribute="width" constant="190" id="mdq-tT-OYk"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="38"/>
-                                <state key="normal" title="LEVEL 2">
+                                <state key="normal" title="TRIVIA">
                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
@@ -253,7 +254,7 @@
                                     <constraint firstAttribute="width" constant="190" id="hK4-yV-UCE"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="38"/>
-                                <state key="normal" title="LEVEL 3">
+                                <state key="normal" title="HISTORY">
                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
@@ -284,7 +285,7 @@
     </scenes>
     <resources>
         <image name="claraSpenceBust" width="682" height="724"/>
-        <image name="spencerTheSaber" width="527" height="527"/>
+        <image name="spenceLogo" width="225" height="225"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="5jt-q9-v0U"/>
