--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jhN-uh-UJv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jhN-uh-UJv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -44,7 +44,7 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ll-47-QUi">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ll-47-QUi" userLabel="questionLabel">
                                 <rect key="frame" x="26" y="55.5" width="50.5" height="122"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="122" id="y9i-Tj-DHG" userLabel="height ="/>
@@ -54,13 +54,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="claraSpenceBust" translatesAutoresizingMaskIntoConstraints="NO" id="8wF-to-g5i" userLabel="claraSpenceBust">
-                                <rect key="frame" x="37.5" y="180.5" width="300" height="306"/>
+                                <rect key="frame" x="37.5" y="280.5" width="300" height="306"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="8wF-to-g5i" secondAttribute="height" multiplier="47:48" id="hee-r5-Hmj"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kR3-Xf-vgH">
-                                <rect key="frame" x="62.5" y="536.5" width="250" height="30"/>
+                                <rect key="frame" x="62.5" y="177.5" width="250" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="5O8-ah-JPe"/>
                                 </constraints>
@@ -69,7 +69,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d5m-rg-gde">
-                                <rect key="frame" x="163" y="586.5" width="49" height="30"/>
+                                <rect key="frame" x="163" y="217.5" width="49" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="7Np-7D-btF"/>
                                 </constraints>
@@ -85,22 +85,30 @@
                                     <constraint firstAttribute="width" constant="200" id="sYJ-Vr-eBd"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ImS-Wg-am9" userLabel="questionCount">
+                                <rect key="frame" x="166.5" y="39.5" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.98825462139999998" green="1" blue="0.36187980539999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.75" id="0rI-Cz-kPA"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1lj-O8-iED"/>
-                            <constraint firstItem="kR3-Xf-vgH" firstAttribute="top" secondItem="8wF-to-g5i" secondAttribute="bottom" constant="50" id="37P-rJ-edA"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.5" id="4OX-P3-WNf"/>
                             <constraint firstItem="8wF-to-g5i" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7gt-aB-0J7"/>
-                            <constraint firstItem="8wF-to-g5i" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="8v5-Fh-5wO"/>
+                            <constraint firstItem="8wF-to-g5i" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.3" id="8v5-Fh-5wO"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="BhB-nM-KZn"/>
                             <constraint firstItem="d5m-rg-gde" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PZ8-7b-bX0"/>
                             <constraint firstItem="9YG-I7-HBv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.78" id="Qd9-sH-aKY"/>
                             <constraint firstItem="8wF-to-g5i" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="QzG-Q3-ZMh"/>
                             <constraint firstItem="1ll-47-QUi" firstAttribute="trailingMargin" relation="lessThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="trailing" constant="-25" id="Tti-P2-wTb"/>
+                            <constraint firstItem="ImS-Wg-am9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZHv-YC-IE0"/>
                             <constraint firstItem="9YG-I7-HBv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="a9I-5H-mne"/>
-                            <constraint firstItem="d5m-rg-gde" firstAttribute="top" secondItem="kR3-Xf-vgH" secondAttribute="top" constant="50" id="cbH-f9-ola"/>
+                            <constraint firstItem="d5m-rg-gde" firstAttribute="top" secondItem="kR3-Xf-vgH" secondAttribute="bottom" constant="10" id="cbH-f9-ola"/>
+                            <constraint firstItem="ImS-Wg-am9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.15" id="gMk-Xs-sqe"/>
+                            <constraint firstItem="kR3-Xf-vgH" firstAttribute="top" secondItem="1ll-47-QUi" secondAttribute="bottom" id="ja6-vV-jG4"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kia-Au-D9P"/>
                             <constraint firstItem="1ll-47-QUi" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.35" id="ufS-38-bCP"/>
                             <constraint firstItem="kR3-Xf-vgH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xNf-iP-cvG"/>
@@ -111,6 +119,7 @@
                         <outlet property="answerTableView" destination="dDo-ad-t0B" id="z08-T8-5QU"/>
                         <outlet property="claraSpenceBust" destination="8wF-to-g5i" id="w8t-Sb-dP1"/>
                         <outlet property="enterNameField" destination="kR3-Xf-vgH" id="IZU-wy-OAV"/>
+                        <outlet property="questionCountLabel" destination="ImS-Wg-am9" id="jIm-Bt-QO0"/>
                         <outlet property="questionLabel" destination="1ll-47-QUi" id="Smc-9Y-pfO"/>
                         <outlet property="spenceLogo" destination="9YG-I7-HBv" id="z5u-SD-x5t"/>
                         <outlet property="submitButton" destination="d5m-rg-gde" id="2rU-ZT-By3"/>
