--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -96,7 +96,6 @@
                         <constraints>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.75" id="0rI-Cz-kPA"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1lj-O8-iED"/>
-                            <constraint firstItem="dDo-ad-t0B" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.6" placeholder="YES" id="4OX-P3-WNf" userLabel="Answer Table View.centerY = 1.6 × centerY"/>
                             <constraint firstItem="8wF-to-g5i" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7gt-aB-0J7"/>
                             <constraint firstItem="8wF-to-g5i" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.3" id="8v5-Fh-5wO"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.15" id="Apr-eZ-sP0"/>
@@ -120,12 +119,12 @@
                         <outlet property="answerTableView" destination="dDo-ad-t0B" id="z08-T8-5QU"/>
                         <outlet property="claraSpenceBust" destination="8wF-to-g5i" id="w8t-Sb-dP1"/>
                         <outlet property="enterNameField" destination="kR3-Xf-vgH" id="IZU-wy-OAV"/>
-                        <outlet property="movedTableViewConstraint" destination="4OX-P3-WNf" id="MmA-iX-gnB"/>
                         <outlet property="questionCountLabel" destination="ImS-Wg-am9" id="jIm-Bt-QO0"/>
                         <outlet property="questionLabel" destination="1ll-47-QUi" id="Smc-9Y-pfO"/>
                         <outlet property="spenceLogo" destination="9YG-I7-HBv" id="z5u-SD-x5t"/>
                         <outlet property="submitButton" destination="d5m-rg-gde" id="2rU-ZT-By3"/>
                         <outlet property="tableView" destination="dDo-ad-t0B" id="2AH-Sc-92C"/>
+                        <outlet property="tableViewYConstraint" destination="Apr-eZ-sP0" id="Xke-Pt-rnR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
